--- a/jb-decision-split/config.json
+++ b/jb-decision-split/config.json
@@ -1,8 +1,7 @@
 {
 	"workflowApiVersion": "1.1",
 	"metaData": {
-		"icon": "split.png",
-		"iconSmall": "split.png"
+		"icon": "shuffle.png"
 	},
 	"type": "RESTDECISION",
 	"outcomes": [
